Version 0.20.1 (2022-01-13)
- Remove typecast for text, binary_sensor and number
- Don't exclude servicemeldungen from sysvars

Version 0.20.0 (2022-01-12)
- Add converter to BaseParameterEntity/GenericEntity
- Fix number entities returning None when 0

Version 0.19.0 (2022-01-11)
- Mark secondary channels name with a V --> Vch

Version 0.18.1 (2022-01-10)
- Reduce some log_level
- Fix callback to notify un_reach

Version 0.18.0 (2022-01-09)
- Add config option to specify storage directory
- Move Exceptions to own module
- Add binary_sensor platform for SVs
- Add config check
- Add hub_entities_by_platform
- Remove option_enable_sensors_for_system_variables

Version 0.17.1 (2022-01-09)
- Fix naming for multi channel custom entities

Version 0.17.0 (2022-01-09)
- Refactor entity definition
    - improve naming
    - classify entities (primary, secondary, sensor, Generic, Event)
- remove option_enable_virtual_channels from central
- remove entity.create_in_ha. Replaced by HmEntityUsage

Version 0.16.2 (2022-01-08)
- Fix enum str in entity definition

Version 0.16.1 (2022-01-08)
- Use helper for device_name
- Add logging to show usage of unique_id in name
- Add HmIPW-WRC6 to custom entities
- Add HmIP-SCTH230 to custom entities
- Refactor entity definition
    - Remove unnecessary field names from additional entity definitions
    - Add additional entity definitions by device type

Version 0.16.0 (2022-01-08)
- Return unique_id if name is not in cache
- Remove no longer needed press_virtual_remote_key

Version 0.15.2 (2022-01-07)
- Add devices to CustomEntity
    - HmIP-WGC
    - HmIP-WHS
- Update to pydevccu 0.1.0

Version 0.15.1 (2022-01-07)
- Identify virtual remote by device type
- Fix Device Exporter / format output

Version 0.15.0 (2022-01-07)
- Use actions instead of buttons for virtual remotes

Version 0.14.1 (2022-01-06)
- Remove SVs from EXCLUDED_FROM_SENSOR

Version 0.14.0 (2022-01-06)
- Switch some HM-LC-Bl1 to cover
- Use decorators on central methods